--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-python-telegram-bot==20.3
-apscheduler==3.10.0
-sqlalchemy==2.0.20
 python-dotenv==1.0.0
-# cryptography==41.0.4
-# pytest==7.4.0
-# python-dateutil==2.8.2
-# pywin32==306
+py-asterisk
+aiohttp
+python-dateutil
+apscheduler==3.10.0
+fastapi
+uvicorn[standard]
+httpx
+cryptography
+python-telegram-bot==20.*    # match your version
+SQLAlchemy>=1.4
